--- a/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
+++ b/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
@@ -4,8 +4,8 @@
     <li>
         <a asp-controller="Room" asp-action="Index">ROOMS</a>
         <ul class="submenu">
-            <li><a asp-controller="RoomList" asp-action="Index">ROOM LIST</a></li>
-            <li><a asp-controller="RoomDetails" asp-action="Index">ROOM DETAILS</a></li>
+            <li><a asp-controller="Room" asp-action="RoomList">ROOM LIST</a></li>
+            <li><a asp-controller="Room" asp-action="RoomDetails">ROOM DETAILS</a></li>
         </ul>
     </li>
     <li>
@@ -43,8 +43,8 @@
             </li>
         </ul>
     </li>
-    <li><a href="location.html">LOCATION</a></li>
-    <li><a href="event.html">EVENT</a></li>
-    <li><a href="team.html">TEAM</a></li>
-    <li><a href="contact.html">CONTACT</a></li>
+    <li><a asp-controller="Location" asp-action="Index">LOCATION</a></li>
+    <li><a asp-controller="Event" asp-action="Index">EVENT</a></li>
+    <li><a asp-controller="Team" asp-action="Index">TEAM</a></li>
+    <li><a asp-controller="Home" asp-action="Contact">CONTACT</a></li>
 </ul>
