--- a/Hotel.ATR.Portal/Views/Room/Index.cshtml
+++ b/Hotel.ATR.Portal/Views/Room/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@section style{
+﻿@model User
+
+
+@section style{
     <link rel="stylesheet" href="~/css/responsive.css">
 }  
   <!-- Breadcrumb Area Start-->
@@ -12,7 +15,7 @@
                     <div class="breadcrumb-bar">
                         <ul class="breadcrumb">
                             <li><a href="index.html">Home</a></li>
-                            <li>Room - grid view</li>
+                            <li> @ViewBag.User @Model.email  Room - grid view</li>
                         </ul>
                     </div>
                 </div>
