теперь в мобильной версии все переходы работают

--- a/Hotel.ATR.Portal/Views/Home/Contact.cshtml
+++ b/Hotel.ATR.Portal/Views/Home/Contact.cshtml
@@ -42,7 +42,7 @@
                     <p>A quality room of hotel ATR with sea or mountain view</p>
                     <div class="breadcrumb-bar">
                         <ul class="breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                             <li>Contact Us</li>
                         </ul>
                     </div>
