--- a/Hotel.ATR.Portal/Views/Event/Index.cshtml
+++ b/Hotel.ATR.Portal/Views/Event/Index.cshtml
@@ -14,7 +14,7 @@
                     <p>A quality room of hotel ATR with sea or mountain view</p>
                     <div class="breadcrumb-bar">
                         <ul class="breadcrumb">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                             <li>Events</li>
                         </ul>
                     </div>
