--- a/Hotel.ATR.Portal/Views/Shared/_HomeLayout.cshtml
+++ b/Hotel.ATR.Portal/Views/Shared/_HomeLayout.cshtml
@@ -58,24 +58,31 @@
         </div>
         <!-- Mobile Menu Area start -->
         <div class="mobile-menu-area">
+          @*  <nav>
+                @{
+                    Html.RenderPartial("_MainMenu");
+                }
+
+            </nav>*@
+
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="mobile-menu">
                             <nav id="dropdown">
                                 <ul>
-                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a asp-controller="Home" asp-action="Index">HOME</a></li>
                                     <li>
-                                        <a href="room-grid.html">ROOMS</a>
+                                        <a asp-controller="Room" asp-action="Index">ROOMS</a>
                                         <ul class="submenu">
-                                            <li><a href="room-list.html">ROOM LIST</a></li>
-                                            <li><a href="room-details.html">ROOM DETAILS</a></li>
+                                            <li><a asp-controller="Room" asp-action="RoomList">ROOM LIST</a></li>
+                                            <li><a asp-controller="Room" asp-action="RoomDetails">ROOM DETAILS</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="location.html">LOCATION</a></li>
-                                    <li><a href="event.html">EVENT</a></li>
-                                    <li><a href="team.html">TEAM</a></li>
-                                    <li><a href="contact.html">CONTACT</a></li>
+                                    <li><a asp-controller="Location" asp-action="Index">LOCATION</a></li>
+                                    <li><a asp-controller="Event" asp-action="Index">EVENT</a></li>
+                                    <li><a asp-controller="Team" asp-action="Index">TEAM</a></li>
+                                    <li><a asp-controller="Home" asp-action="Contact">CONTACT</a></li>
                                 </ul>
                             </nav>
                         </div>
