--- a/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
+++ b/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
@@ -14,30 +14,30 @@
             <li>
                 <a href="#">Megamenu List</a>
                 <ul>
-                    <li><a href="location.html">Location</a></li>
+                    <li><a asp-controller="Location" asp-action="Index">Location</a></li>
                     <li><a href="room-grid.html">Room Grid</a></li>
-                    <li><a href="room-list.html">Room List</a></li>
-                    <li><a href="room-details.html">Room Details</a></li>
+                    <li><a asp-controller="Room" asp-action="RoomList">Room List</a></li>
+                    <li><a asp-controller="Room" asp-action="RoomDetails">Room Details</a></li>
                     <li><a href="#">Mega menu</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">Megamenu List</a>
                 <ul>
-                    <li><a href="event.html">Event</a></li>
+                    <li><a asp-controller="Event" asp-action="Index">Event</a></li>
                     <li><a href="#">Mega menu</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="team.html">Team</a></li>
+                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Team" asp-action="Index">Team</a></li>
                     <li><a href="#">Mega menu</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">Megamenu List</a>
                 <ul>
-                    <li><a href="room-list.html">Room List</a></li>
+                    <li><a asp-controller="Room" asp-action="RoomList">Room List</a></li>
                     <li><a href="#">Mega menu</a></li>
                     <li><a href="room-grid.html">Room Grid</a></li>
-                    <li><a href="room-details.html">Room Details</a></li>
+                    <li><a asp-controller="Room" asp-action="RoomDetails">Room Details</a></li>
                     <li><a href="#">Mega menu</a></li>
                 </ul>
             </li>
@@ -48,3 +48,29 @@
     <li><a asp-controller="Team" asp-action="Index">TEAM</a></li>
     <li><a asp-controller="Home" asp-action="Contact">CONTACT</a></li>
 </ul>
+
+@*<div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="mobile-menu">
+                <nav id="dropdown">
+                    <ul>
+                        <li><a asp-controller="Home" asp-action="Index">HOME</a></li>
+                        <li>
+                            <a asp-controller="Room" asp-action="Index">ROOMS</a>
+                            <ul class="submenu">
+                                <li><a asp-controller="Room" asp-action="RoomList">ROOM LIST</a></li>
+                                <li><a asp-controller="Room" asp-action="RoomDetails">ROOM DETAILS</a></li>
+                            </ul>
+                        </li>
+                        <li><a asp-controller="Location" asp-action="Index">LOCATION</a></li>
+                        <li><a asp-controller="Event" asp-action="Index">EVENT</a></li>
+                        <li><a asp-controller="Team" asp-action="Index">TEAM</a></li>
+                        <li><a asp-controller="Home" asp-action="Contact">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+*@
