--- a/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
+++ b/Hotel.ATR.Portal/Views/Shared/_MainMenu.cshtml
@@ -47,6 +47,24 @@
     <li><a asp-controller="Event" asp-action="Index">EVENT</a></li>
     <li><a asp-controller="Team" asp-action="Index">TEAM</a></li>
     <li><a asp-controller="Home" asp-action="Contact">CONTACT</a></li>
+    <li>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a asp-controller="Home" asp-action="Logout">
+                @User.Identity.Name |
+                LOGOUT
+
+            </a>
+        }
+        else
+        {
+            <a asp-controller="Home" asp-action="Login">
+                @User.Identity.Name |
+                LOGIN
+
+            </a>
+        }
+    </li>
 </ul>
 
 @*<div class="container">
