--- a/Hotel.ATR.Portal/Views/Home/Login.cshtml
+++ b/Hotel.ATR.Portal/Views/Home/Login.cshtml
@@ -62,7 +62,7 @@
                         <div class="col-md-12">
                             <input type="hidden" name="ReturnUrl"
                                    value="@ViewBag.ReturnUrl" />
-                            <button type="Login" class="default-btn">Login</button>
+                            <button type="submit" class="default-btn">LOGIN</button>
                         </div>
                     </div>
                 </form>
